Layout is locked in... need to fix carousel bug upon click it shifts the page down?

--- a/styles.css
+++ b/styles.css
@@ -2,7 +2,7 @@
 * {
     margin: 0;
     padding: 0;
-    /* box-sizing: border-box; */
+    box-sizing: border-box;
 }
 
 html {
@@ -48,11 +48,12 @@ a {
     color: inherit;
     font-weight: 600;
     transition: all .5s ease-in-out;
-    text-transform: none;
+    /* text-transform: none; */
 }
 
 a:hover {
     color: red;
+    cursor: pointer;
 }
 
 /*----- OVERALL DESIGN -------*/ /*----- OVERALL DESIGN -------*/
@@ -80,29 +81,47 @@ p {
 /*----- HEADER -------*//*----- HEADER -------*/
 /*----- HEADER -------*//*----- HEADER -------*/
 /*----- HEADER -------*//*----- HEADER -------*/
- /* CAROUSEL  */
+ 
+/* CAROUSEL  */
 * {box-sizing: border-box}
-
+img {
+    margin: 0;
+    padding: 0;
+}
+body, .myslides, .carouselbox, .dot {
+    margin: 0;
+    padding: 0;
+    height: 100vh;
+    width: 100%;
+    overflow: auto;
+} 
+/*
  /* CONTAINER */
- .slideshow-container {
-     max-width: 100%;
-     position: relative;
-     margin: 0;
-     max-height: 100vh;
+ .carouselbox {
+    position: relative;
+    overflow: hidden;
+    background-position: cover;
  }
 
  /* HIDE THE IMAGES BY DEFAULT */
- .myslides {
-     display: none;
- }
+ /* .myslides {
+    display: none;
+    background-size: cover;
+    background-position: center;
+    background-repeat: none;
+ } */
 
 /* CAPTION TEXT */
-.text {
+.slideText {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
     color: #f2f2f2;
-    font-size: 15px;
-    padding: 8px 12px;
+    font-size: 2em;
+    padding: 1em 2em;
     position: absolute;
-    bottom: 8px;
+    bottom: 3em;
     width: 100%;
     text-align: center;
 }
@@ -113,15 +132,16 @@ p {
     font-size: 12px;
     padding: 8px 12px;
     position: absolute;
-    top: 0;
+    top: 3em;
+    left: 3em;
 }
 
  /* DOTS AND BULLETS INDICATORS */
  .dot {
      cursor: pointer;
-     height: 15px;
-     width: 15px;
-     margin: 0 2px;
+     height: 1em;
+     width: 1em;
+     margin: 2em 2em;
      background-color: #bbb;
      border-radius: 50%;
      display: inline-block;
@@ -129,7 +149,7 @@ p {
  }
 
  .active, .dot:hover {
-     background-color: #717171;
+     background-color: grey;
  }
 
  /* FADING ANIMATION */
@@ -151,7 +171,15 @@ p {
  }
 
 
-
+/* HEADER DESIGN ON TOP OF CAROUSEL */
+.tagline {
+    color: white;
+    font-family: "Playfair Display", serif;
+    font-size: 10em;
+    text-align: left;
+    float: left;
+    padding: 10em;
+}
 /* NAV BAR */
 .fas {
     font-size: 32px;
@@ -187,8 +215,8 @@ p {
     flex-direction: column;
     justify-content: space-between;
     align-items: center;
-    padding: 1em;
-    margin: 2em;
+    padding: 0;
+    margin: 0;
 }
   /* PORTFOLIO WRAPPER */
   #proj0 { grid-area: "proj0"; background: lightblue }
@@ -234,6 +262,7 @@ p {
     "about skills"
     "contact test";
   align-items: center;
+  margin: 0 0 4em;
 }
 
 .box2 {
@@ -287,8 +316,9 @@ h2 {
     width: 100%;
     color: teal;
     display: flex;
-    flex-direction: row;
-    align-content: flex-end;
+    flex-direction: row-reverse;
+    align-content: flex-start;
+    justify-items: right;
     font-weight: bold;
     font-size: 1.25em;
     margin: 1.5em 0 0;
@@ -297,8 +327,10 @@ h2 {
     text-decoration: none;
     color: inherit;
 }
+
+
 .copyright {
-    text-align: left;
+    text-align: right;
     color: teal;
     font-size: 1.25em;
     padding: 1.5em;
@@ -313,9 +345,8 @@ h2 {
 
 /* Change the color of links on hover */
 /* #footerBar a:hover {
-    background-color: #ddd;
-    color: yellow;
-} */
+    background-color: lightgrey;
+}
 
 /* Add a color to the active/current link */
 /* #footerBar a.active {
